--- a/.env.example
+++ b/.env.example
@@ -10,19 +10,25 @@
 # Esempio con autenticazione: http://user:password@host:port
 
 # --- Proxy Globale ---
-# Usato per tutte le richieste che non hanno un proxy specifico (Vavoo, DLHD).
+# Usato per tutte le richieste che non hanno una regola specifica in TRANSPORT_ROUTES.
 # Esempio: GLOBAL_PROXY=http://myproxy.com:8080,socks5://user:pass@anotherproxy.com:1080
 #GLOBAL_PROXY=
 
-# --- Proxy per Vavoo ---
-# Usato specificamente per le richieste a Vavoo. Se non impostato, usa GLOBAL_PROXY.
-#VAVOO_PROXY=
-
-# --- Proxy per DaddyLiveHD (DLHD) ---
-# Usato specificamente per le richieste a DLHD. Se non impostato, usa GLOBAL_PROXY.
-#DLHD_PROXY=
+# --- Regole di Trasporto (TRANSPORT_ROUTES) ---
+# Sistema avanzato per routing proxy basato su URL patterns.
+# Formato: {URL=pattern, PROXY=proxy_url, DISABLE_SSL=true}, {URL=pattern2, PROXY=proxy_url2, DISABLE_SSL=true}
+# - URL: pattern da cercare nell'URL (es. vavoo.to, dlhd.dad, giokko.ru)
+# - PROXY: proxy da usare (lascia vuoto per connessione diretta)
+# - DISABLE_SSL: per disattivare la verifica ssl
+# Esempi:
+# TRANSPORT_ROUTES={URL=vavoo.to, PROXY=socks5://proxy1:1080, DISABLE_SSL=true}, {URL=dlhd.dad, PROXY=http://proxy2:8080, DISABLE_SSL=true}
+#TRANSPORT_ROUTES=
 
 # --- Password API ---
 # Protegge l'accesso alle API del proxy. Se impostata, deve essere passata
 # come parametro query (?api_password=...) o header (x-api-password).
 #API_PASSWORD=password_segreta
+
+# --- Porta del Server ---
+# Specifica la porta su cui il server deve ascoltare (default: 7860)
+#PORT=7860
