--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@
 # --- Porta del Server ---
 # Specifica la porta su cui il server deve ascoltare (default: 7860)
 #PORT=7860
+
+# --- Modalità Elaborazione MPD ---
+# Scegli come gestire gli stream MPD/DASH:
+# - ffmpeg: Transcoding via FFmpeg (richiede FFmpeg installato, alta CPU ma sync A/V migliore)
+# - legacy: Usa mpd_converter + drm_decrypter (più leggero ma possibili problemi di compatibilità)
+#MPD_MODE=legacy
