--- a/Dockerfile-hf
+++ b/Dockerfile-hf
@@ -1,9 +1,9 @@
 # Fase 1: Build
-# Usa un'immagine Python ufficiale e leggera come base.
-FROM python:3.11-slim
+# Usa un'immagine Python con base Debian per FFmpeg completo
+FROM python:3.11-bookworm
 
-# Installa git, necessario per il clone.
-RUN apt-get update && apt-get install -y git
+# Installa git e FFmpeg (versione completa con DASH/CENC)
+RUN apt-get update && apt-get install -y git ffmpeg && rm -rf /var/lib/apt/lists/*
 
 # Imposta la directory di lavoro all'interno del container.
 WORKDIR /app
@@ -11,7 +11,7 @@ WORKDIR /app
 # CLONA il repository. Questo comando scarica TUTTI i file, incluso requirements.txt.
 RUN git clone https://github.com/nzo66/EasyProxy . 
 
-# Installa le dipendenze.
+# Installa le dipendenze Python.
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copia il resto del codice dell'applicazione nella directory di lavoro.
