--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,16 @@
 # - ffmpeg: Transcoding via FFmpeg (richiede FFmpeg installato, alta CPU ma sync A/V migliore)
 # - legacy: Usa mpd_converter + drm_decrypter (più leggero ma possibili problemi di compatibilità)
 #MPD_MODE=legacy
+
+# --- DVR/Recording Settings ---
+# Enable DVR/recording functionality (default: false)
+#DVR_ENABLED=false
+
+# Directory where recordings will be saved (default: recordings)
+#RECORDINGS_DIR=recordings
+
+# Maximum recording duration in seconds (default: 28800 = 8 hours)
+#MAX_RECORDING_DURATION=28800
+
+# Auto-delete recordings older than X days (default: 7)
+#RECORDINGS_RETENTION_DAYS=7
